# dste-acceptance-assignment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
app/: conftest.py  entrypoint.sh  main.py  routes.py  security.py  settings.py
app/housing/: enums.py  model.py  response_models.py  routes.py
app/housing/tests/: test_predict_authentication.py  test_predict_rate_limiting.py  test_predict_sample_output.py  test_predict_validation.py
