[project]
name = "dtse-acceptance-assignment"
version = "0.1.0"
description = "Assignment to be accepted as AIS Backend Developer at DTSE."
authors = [
    {name = "Vojtěch Mrkývka",email = "vojtech.mrkyvka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "joblib (==1.2.0)",
    "numpy (==1.23.4)",
    "pandas (==1.5.0)",
    "python-dateutil (==2.8.2)",
    "pytz (==2022.4)",
    "scikit-learn (==1.1.2)",
    "scipy (==1.9.2)",
    "six (==1.16.0)",
    "sklearn (==0.0)",
    "threadpoolctl (==3.1.0)",
    "fastapi (==0.110.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "httpx (>=0.27,<0.28)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
